  range). (Stas)
- Fixed bug #50481 (Storing many SPLFixedArray in an array crashes). (Felipe)
- Fixed bug #52260 (dns_get_record fails with non-existing domain on Windows).
  (a_jelly_doughnut at phpbb dot com, Pierre)
- Fixed bug #50953 (socket will not connect to IPv4 address when the host has
  both IPv4 and IPv6 addresses, on Windows). (Gustavo, Pierre)
- Fixed bug #50524 (proc_open on Windows does not respect cwd as it does on
  other platforms). (Pierre)
- Fixed bug #50345 (nanosleep not detected properly on some solaris versions).
  (Ulf, Tony)
- Fixed bug #49687 (utf8_decode vulnerabilities and deficiencies in the number
  of reported malformed sequences). (CVE-2010-3870) (Gustavo)
- Fixed bug #49407 (get_html_translation_table doesn't handle UTF-8). (Gustavo)
- Fixed bug #49215 (make fails on glob_wrapper). (Felipe)
- Fixed bug #48831 (php -i has different output to php --ini). (Richard, 
  Pierre)
- Fixed bug #47643 (array_diff() takes over 3000 times longer than php 5.2.4).
  (Felipe)
- Fixed bug #45921 (Can't initialize character set hebrew). (Andrey)
- Fixed bug #44248 (RFC2616 transgression while HTTPS request through proxy
  with SoapClient object). (Dmitry)
- Fixed bug #25927 (get_html_translation_table calls the ' &#39; instead of
  &#039;). (Gustavo)

22 Jul 2010, PHP 5.3.3
- Upgraded bundled sqlite to version 3.6.23.1. (Ilia)
- Upgraded bundled PCRE to version 8.02. (Ilia)

- Added support for JSON_NUMERIC_CHECK option in json_encode() that converts 
  numeric strings to integers. (Ilia)
- Added stream_set_read_buffer, allows to set the buffer for read operation.
  (Pierre)
- Added stream filter support to mcrypt extension (ported from 
  mcrypt_filter). (Stas)
- Added full_special_chars filter to ext/filter. (Rasmus)
- Added backlog socket context option for stream_socket_server(). (Mike)
- Added fifth parameter to openssl_encrypt()/openssl_decrypt()
  (string $iv) to use non-NULL IV.
  Made implicit use of NULL IV a warning. (Sara)